<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="all_credit_limits">Add up all credit limits on your open credit cards:</string>
    <string name="all_credit_limits_bar_max">$100000+</string>
    <string name="all_credit_limits_bar_min">$0</string>
    <string name="all_credit_limits_default_value">$100000</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Credit Score</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_credit">How many times have you applied for credit in the last 6 month?</string>
    <string name="apply_credit_bar_max">10+</string>
    <string name="apply_credit_bar_min">0</string>
    <string name="apply_credit_default_value">0</string>
    <string name="auto_loans">Auto Loans</string>
    <string name="benefits_ans_1">A good Credit Score may get you the best of Credit Cards. Get a feature-loaded card and reap the benefits. If you have a good Credit Score, you can avail loans and Credit Cards faster and with ease.</string>
    <string name="benefits_ans_2">A good Credit Score works like an expressway for your loan application. Banks may approve your application quickly and readily.</string>
    <string name="benefits_ans_3">With the backing of a good Credit Score, you can bargain for a lower rate of interest on loans and Credit Cards.</string>
    <string name="benefits_ans_4">Loans come saddled with processing fees and many other charges. You can bargain your way out of some of these charges with a good Credit Score. Check your Credit Score right away and see if you are eligible for all these benefits. You can check your score on BankBazaar at zero cost.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="calculate_results">Estimate your score</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="copytext1">To Know More About</string>
    <string name="copytext2">Please click on the below button to copy link and open in Web Browser.</string>
    <string name="count_following_accounts">How many of the following accounts (open and closed) do you have listed on your credit report?</string>
    <string name="count_following_accounts_default">0</string>
    <string name="credit_cards">Credit cards</string>
    <string name="credit_cards_bar_max">6+</string>
    <string name="details1">&lt;b&gt;Unlimited Access&lt;/b&gt;: You can check your CIBIL Score &amp;amp; Report every 24 hours within your subscription period (1 month, 6 months, 12 months).&lt;br&gt;&lt;/br&gt;&lt;br&gt;&lt;/br&gt;Here is what members get: &lt;b&gt;Unlimited Access&lt;/b&gt;, &lt;b&gt;Loan Offers&lt;/b&gt;, &lt;b&gt;Credit Monitoring&lt;/b&gt;, &lt;b&gt;Dispute Resolution&lt;/b&gt; and more.</string>
    <string name="details2">Introducing &lt;b&gt;Score Simulator&lt;/b&gt; with your CIBIL Score subscription. &lt;b&gt;Monitoring &amp;amp; maintaining&lt;/b&gt; your credit health now becomes easier.&lt;br&gt;&lt;/br&gt;&lt;br&gt;&lt;/br&gt;&lt;b&gt;Subscription Plan&lt;/b&gt;:&lt;br&gt;&lt;/br&gt;Premium ₹1200(1 Year)&lt;br&gt;&lt;/br&gt;Standard ₹800(6 Month)&lt;br&gt;&lt;/br&gt;Basic ₹550(1 Month).</string>
    <string name="details3">Introducing &lt;b&gt;CIBIL RANK&lt;/b&gt; with your Company Credit Report at &lt;b&gt;no additional cost&lt;/b&gt;. &lt;br&gt;&lt;br&gt;The CIBIL RANK and Company Credit Report is an indication of your loan eligibility.</string>
    <string name="details4">Calculate or Estimate your &lt;b&gt;CIBIL Score&lt;/b&gt; for Free. &lt;br&gt;&lt;/br&gt;Great! Now that you are here, you would be keen to check your online Cibil score free of cost.&lt;br&gt;&lt;/br&gt;&lt;br&gt;&lt;/br&gt;We have been helping friends like you get a free Cibil score with an accuracy of up to 93%.</string>
    <string name="details5">Looking for loans for your CIBIL Score?&lt;br&gt;&lt;/br&gt; &lt;b&gt;Our Eligibility&lt;/b&gt; &lt;br&gt;&lt;/br&gt;• Cibil Score above 550 &lt;br&gt;&lt;/br&gt;• Loans ranging from ₹120,000 to ₹150,000 &lt;br&gt;&lt;/br&gt;• Tenure between 3 months to 12 months&lt;br&gt;&lt;/br&gt;• Interest Rate between 1.5% to 2.5% per month (flat)</string>
    <string name="details6">Do you want to correct information on your CIBIL Report, and don\'t know where to start?&lt;br&gt;&lt;br&gt;You can now initiate a dispute online with CIBIL for inaccuracies, account ownership and duplication of information that reflect in your Credit Report.CIBIL does not charge its consumers for this service.</string>
    <string name="details7">India Ratings and Research (Ind-Ra) is India\'s most respected credit rating agency committed to providing India\'s credit markets accurate, timely and prospective credit opinions</string>
    <string name="details8">Check your FREE Credit Score and report Instantly.&lt;br&gt;&lt;/br&gt;How It Works&lt;br&gt;&lt;/br&gt;• Get a Credit Score for Free from CreditMantri.&lt;br&gt;&lt;/br&gt;• Flag off problem areas where you need expertise/help.&lt;br&gt;&lt;/br&gt;• Improve your Credit Score and Build Your Credit profile.&lt;br&gt;&lt;/br&gt;• Reduce EMI and borrowing costs and more.</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="f_ans">Ans:-TransUnion CIBIL Limited (or CIBIL – Credit Information Bureau India Limited CIBIL) is one of the foremost credit bureaus licensed to operate by the Reserve Bank of India (RBI). CIBIL gathers and preserves records of an individual’s payments pertaining to credit cards and loans.</string>
    <string name="f_que">What is CIBIL?</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="fi_ans">Ans:-A profile which has a high credit score has brighter chances of loan approval whereas a low score reflects low credibility resulting in less credit approvals.</string>
    <string name="fi_que">How do high and low credit score affect a credit profile?</string>
    <string name="first_open_oldest_active">When did you first open your oldest active credit or loan account?</string>
    <string name="first_open_oldest_active_bar_max">10+ years</string>
    <string name="first_open_oldest_active_bar_min">0</string>
    <string name="fist_open_oldest_active_default">0</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="last_negative_item">When was the last negative item on your credit report?</string>
    <string name="last_negative_item_bar_max">7+ years</string>
</resources>