<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg11">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner1"
        android:fillViewport="true"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/text_15"
                app:cardElevation="@dimen/text_5"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexenddecaregular"
                        android:text="@string/apply_credit"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/seek_bar_height"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="@string/apply_credit_bar_min"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <SeekBar
                            android:id="@+id/apply_credit_bar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="@dimen/seek_bar_padding"
                            android:paddingRight="@dimen/seek_bar_padding" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="@string/apply_credit_bar_max"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/apply_credit_limits_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexenddecaregular"
                        android:gravity="center"
                        android:text="@string/apply_credit_default_value"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/text_15"
                app:cardElevation="@dimen/text_5"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexenddecaregular"
                        android:text="@string/first_open_oldest_active"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/seek_bar_height"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="@string/first_open_oldest_active_bar_min"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <SeekBar
                            android:id="@+id/first_open_oldest_active_bar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="@dimen/seek_bar_padding"
                            android:paddingRight="@dimen/seek_bar_padding" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="@string/first_open_oldest_active_bar_max"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/first_open_oldest_active_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lexenddecaregular"
                        android:gravity="center"
                        android:text="@string/fist_open_oldest_active_default"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|right|center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_b1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:fontFamily="@font/lexenddecaregular"
                        android:paddingLeft="@dimen/button_padding"
                        android:paddingRight="@dimen/button_padding"
                        android:text="@string/calculate_results"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/banner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center" />
    </RelativeLayout>
</RelativeLayout>
