<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="19dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lexenddecaregular"
            android:gravity="center"
            android:text="Benefits"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/text_5"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:fontFamily="@font/lexenddecaregular"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="Good Credit Score Benefits"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="@dimen/text_5"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/t1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="Get The Best Credit Card"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/t1_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lexenddecaregular"
                        android:text="@string/benefits_ans_1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="16dp"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="7dp"
                app:cardElevation="@dimen/text_5"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/t3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="Quick Loan Approval"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/t3_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lexenddecaregular"
                        android:text="@string/benefits_ans_2"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="16dp"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="7dp"
                app:cardElevation="@dimen/text_5"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/t2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="Better Interest Rate"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/t2_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lexenddecaregular"
                        android:text="@string/benefits_ans_3"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="16dp"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="7dp"
                app:cardElevation="@dimen/text_5"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/t5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/lexenddecaregular"
                            android:text="Loans Made More Affordable"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/t5_ans"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/lexenddecaregular"
                        android:text="@string/benefits_ans_4"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="16dp"
                        android:visibility="visible" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
